fixing word spacing

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ a:link, a:visited{
 
 	#home h2{
 		font-size: 30px;
-		word-spacing: 500px;
+		word-spacing: 800px;
 	}
 	
 	.blue{
